# kde-uvtt-thumbnailer

./: .gitignore  CMakeLists.txt  README.md
src/: uvttcreator.cpp  uvttcreator.h  uvttthumbnailer.desktop
